src/objects/Open_API_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Open_API_Field_Name__c</fullName>
        <label>Open API Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentField__c</fullName>
        <label>ParentField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFObjectType__c</fullName>
        <label>SFObjectType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Field_Name__c</fullName>
        <label>Salesforce Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isIdField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIdField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSFChildObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSFChildObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSFParentObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSFParentObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTMFChildObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTMFChildObject</label>
        <type>Checkbox</type>
    </fields>
    <label>Open API Mapping</label>
    <pluralLabel>Open API Mappings</pluralLabel>
</CustomObject>